fix(card): fixed card align

--- a/components/Card/card.module.scss
+++ b/components/Card/card.module.scss
@@ -6,14 +6,17 @@ border-left: 3px solid #52FB02;
 display: flex;
 flex-direction: column;
 
+padding: 1rem;
+row-gap: 0.25rem;
 .user{
     display: flex;
     min-width: 30%;
     align-items: center;
    column-gap: 1rem;
+   padding-left: 0.2rem;
 
     .avatar{
-        width: 2%;
+        width: 3%;
         
 
         img{
